# DisPerSE

./: .gitattributes  CMakeLists.txt  License.txt  License_header.txt  cleanup  index.html  params.json  readme.md  whatsnew
data/: simu_2D.ND  simu_2D_nonper.pvsm  simu_32_id.gad  simu_32_per.pvsm
manual/: manual.html
manual/ASCII/: ASCIIformat.txt  README
manual/web/html/: disperse_latest.tar.html  disperse_latest.tar.html~  file-formats.html  index00a4.html  index083b.html  index09c8.html  index0dd1.html  index1670.html  index1694.html  index1694.html~  index16de.html  index1d37.html  index1f6e.html  index2358.html  index25e8.html  index2a13.html  index2d20.html  index2f57.html  index3333.html  index3586.html  index3876.html  index38d8.html  index3bdb.html  index3c4a.html  index4559.html  index4656.html  index490e.html  index4f3e.html  index5399.html  index55a0.html  index55cd.html  index5632.html  index5abb.html  index5b9e.html  index6160.html  index6458.html  index661f.html  index6cc2.html  index7327.html  index744c.html  (+42 more)
manual/web/images/: index0a16.php  index0db0.php  index133f.php  index1867.php  index1fef.php  index3ce5.php  index4ca3.php  index8d50.php  index9edc.php  indexbc59.php  indexd7a0.php  indexdd46.php  indexe8ac.php  post.js  print.css  style.css
modules/: FindCFitsio.cmake  FindCUDA.cmake  FindGSL.cmake  FindMathGL.cmake  FindMathGL2.cmake  FindSDL.cmake  FindTR1.cmake
src/: cleanup
src/C/: NDfield.c  NDfield.h  NDfield_VTK_IO.c  NDfield_VTK_IO.h  NDnet_PLY_IO.c  NDnet_PLY_IO.h  NDnet_VTK_IO.c  NDnet_VTK_IO.h  NDnetwork.c  NDnetwork.h  NDnetwork_tags.c  NDnetwork_tags.h  NDskel_VTK_IO.c  NDskel_VTK_IO.h  NDskel_tags.c  NDskel_tags.h  NDskeleton.c  NDskeleton.h  asciiSurvey.c  asciiSurvey.h  distances.c  distances.h  dtfi.c  dtfi.h  fof_io.c  fof_io.h  fof_struct.h  gadget_io.c  gadget_io.h  gadget_struct.h  global.h  healpix.c  healpix.h  hypercube.c  hypercube.h  myendian.c  myendian.h  mystring.c  mystring.h  mytypes.h  (+13 more)
src/C/rply/: LICENSE
src/C/rply/etc/: sconvert.c
src/C/rply/manual/: manual.html
src/delaunay/: CMakeLists.txt  NDnet_gather.hxx  boundary.hxx  boxPartition.hxx  delaunay.cpp  delaunay.hxx  delaunay_2D.cpp  delaunay_2Dp.cpp  delaunay_3D.cpp  delaunay_3Dp.cpp  delaunay_setup.h  threadedDelaunay.hxx  vertex_info.hxx
src/mse/: CMakeLists.txt  DUMMY_network.hxx  Healpix_network.hxx  MSComplex.hxx  NDcomplex.hxx  NDfield_interface.hxx  NDfield_network.hxx  NDnet_interface.hxx  NDnet_network.hxx  NDnet_unperiodize.hxx  NDskel_assemble.hxx  NDskel_breakdown.cpp  NDskel_breakdown.h  NDskel_breakdown_tools.hxx  NDskel_interface.hxx  NDskel_trim.hxx  NDsubNetwork.hxx  NDsubSkeleton.hxx  PDV_remoteInterface.hxx  SimplicialGrid_network.hxx  Z2set.hxx  arcs_manifold.hxx  arcs_nodes.cpp  arcs_nodes.hxx  boundaryMatrix.hxx  box.hxx  cells.hxx  fieldconv.cpp  find_unordered_maps.hxx  genericIO.hxx  gridType.hxx  manifolds.hxx  mse.cpp  netconv.cpp  network_interface.hxx  nodes_manifold.hxx  ompPSort.hxx  persistenceCycles.hxx  psort_old.hxx  pthreadBarrier.hxx  (+7 more)
src/pdview/: CMakeLists.txt  PDV_interface.hxx  PD_draw.hxx  PD_params.hxx  PD_widget.hxx  cleanup  help.html  pdview.cpp
yorick/: ASCIIpairs.i  ASCIIskel.i  NDfield.i  PoissonPersistence.i  cleanup  comp_fil2.i  cutCatalog.i  fits2cat.i  genRandom.i  genTestPart.i  identifyRegions.i  netPart.i  network.i  network_back.i  pc.dat.left.ascii_TMP.NDnet  persistence.i  skel.i  skl2hp.i  test_perco.i  test_persistence.i  test_skel.i
